--- a/example.tex
+++ b/example.tex
@@ -1,24 +1,66 @@
+
+\newcommand{\hide}[1]
+{}
+
+\hide{
+%<{type: "group", description: "Invoice Information"}
+    %<{
+    %    description: "Paper size",
+    %    placeholder: "Paper size",
+    %    type: "dropdown",
+    %    values: ["letterpaper", "a4paper"],
+    %    id: "paperSize"
+    % }
+    %>
+    
+    %<{description: "Currency", placeholder: "Currency", type: "dropdown", values: ["euro", "dollar", "pound"], id: "currency"}>
+    
+    %<{type: "text", description: "invoice number", id: "invoiceNumber"}>
+    
+    %<{type: "number", description: "Number of days until due date", isInteger: true, id: "numberOfDaysDue"}>
+%>
+    
+%<{type: "group", description: "Business information"}
+    %<{type: "text", description: "Business name", id: "business"}>
+    %<{type: "text", description: "Your full name", id: "yourName"}>
+    %<{type: "text", description: "House number and street", id: "businessStreet"}>
+    %<{type: "text", description: "City and country/state", id: "businessCountry"}>
+    %<{type: "phonenumber", description: "Phone number", id: "businessPhoneNumber"}>
+    %<{type: "email", description: "Email address", id: "businessEmail"}>
+%>
+    
+%<{type: "group", description: "Client information"}
+    %<{type: "text", description: "Client name", id: "clientName"}>
+    %<{type: "text", description: "House number and street", id: "clientStreet"}>
+    %<{type: "text", description: "City and country/state", id: "clientCountry"}>
+    %<{type: "text", description: "Project number or id", id: "projectId"}>
+    %<{type: "text", description: "Client contact name", id: "clientContact"}>
+    %<{type: "phonenumber", description: "Client contact phone number", id: "clientPhone"}>
+    %<{type: "email", description: "Client email address", id: "clientEmail"}>
+%>
+}
+
 % \documentclass[letterpaper]{dapper-invoice}
 %\documentclass[letterpaper,currency=dollar]{dapper-invoice}
-\documentclass[letterpaper,
-%<{"description": "Select your currency", "placeholder": "euro", "type": "dropdown", "values": ["euro", "dollar", "pound"]}
-currency={euro}
-%>
+\documentclass[
+    letterpaper %<{type: "reference", id: "paperSize"}>
+    ,
+currency={euro} %<{type: "reference", id: "currency"}>
 ]{dapper-invoice}
 %\documentclass[letterpaper,currency=pound]{dapper-invoice}
 
 \newcommand{\invoiceNo}
-{101} %<{"type": "text", "description": "invoice number"}>
+{101} %<{type: "reference", id: "invoiceNumber"}>
 \newcommand{\duein}
-{15} %<{"type": "number", "description": "Number of days until due date", "isInteger": true}>
+{15} %<{type: "reference", id: "numberOfDaysDue"}>
 
 \newcommand{\me}
-{Your~Name} %<{"type": "text", "description": "Your name"}>
+{Your~Name} %<{type: "reference", id: "yourName"}>
 \newcommand{\clientName}
-{Sample~Client} %<{"type": "text", "description": "Client name"}>
+{Sample~Client} %<{type: "reference", id: "clientName"}>
 
 \setmetadata{\me}
-{Your Biz}%<{"type": "text", "description": "Your business", "id":"business"}>
+{Your Biz}%<{type: "reference", id: "business"}>
 {\invoiceNo}{\clientName}
 
 \defaultfontfeatures{ Path = ./Fonts/ }
@@ -29,8 +71,9 @@ currency={euro}
 
 \newfontface\mainLightItalic{OpenSans-LightItalic}
 \makeheader
-{Your\ \mainLightItalic Biz}%<{"type": "reference", "id":"business"}>
+{Your\ \mainLightItalic Biz}%<{type: "reference", id: "business"}>
 {\invoiceNo}
+
 
 %-------- collect user information to do calculations beforehand ----------
 
@@ -52,22 +95,21 @@ currency={euro}
 
 %-------- collect user information to do calculations beforehand ----------
 
-%<{"type": "group", "description": "Client information"}
 \twocolumnlayout{
 \begin{infoSection}
     \infoBox{Client}{\clientName \\
-     {123 Street Address} \\ %<{"type":"text", "description": "Client address"}>
-     {City, State 55555} %<{"type":"text", "description": "City and country/state"}>
+     {123 Street Address} \\ %<{type: "reference", id: "clientStreet"}>
+     {City, State 55555} %<{type: "reference", id: "clientCountry"}>
      }
     \infoBox{Project}
-    {\#123.456} %<{"type":"text", "description": "Project number or id"}>
+    {\#123.456} %<{type: "reference", id: "projectId"}>
     \infoBox{Contact}
-    {Jane Smith} %<{"type":"text", "description": "Client contact name"}>
+    {Jane Smith} %<{type: "reference", id: "clientContact", deleteOnEmpty: true}>
     \infoSub{\faMobilePhone}{\small\slshape 
-    {+1~(555)~555-5555} %<{"type":"phonenumber", "description": "Client contact phone number"}>
+    {+1~(555)~555-5555} %<{type: "reference", id: "clientPhone"}>
     }
     \infoSub{\tiny\faEnvelope}{\small\slshape \emaillink
-    {client@example.com} %<{"type":"email", "description": "Client email address"}>
+    {client@example.com} %<{type: "reference", id: "clientEmail"}>
     }
     \noalign{\addvspace{8ex}}
     \infoBox{}{
@@ -76,41 +118,38 @@ currency={euro}
         {\small\color{subduedColor} due \duedate{\duein}}
     }
 \end{infoSection}
-%>
 }
-%<{"type": "group", "description": "Your own details"}
 {
 \begin{infoSection}
     \infoBox{\arrowtarget Payable To}{
         \me \\
-        {1234 Sycamore Ave} \\ %<{"type":"text", "description": "Your address"}>
-        {Blacksburg, VA 24060} %<{"type":"text", "description": "Your city and country/state"}>
+        {1234 Sycamore Ave} \\ %<{type: "reference", id: "businessStreet"}>
+        {Blacksburg, VA 24060} %<{type: "reference", id: "businessCountry"}>
     }
     \infoSub{\faMobilePhone}{\small\slshape 
-    {+1~(555)~555-5555} %<{"type":"phonenumber", "description": "Your phone number"}>
+    {+1~(555)~555-5555} %<{type: "reference", id: "businessPhoneNumber"}>
     }
     \infoSub{\tiny\faEnvelope}{\small\slshape \emaillink
-    {you@example.com} %<{"type":"email", "description": "Your email address"}>
+    {you@example.com} %<{type: "reference", id: "businessEmail"}>
     }
 \end{infoSection}
 \drawarrow
 }
-%>
 \addvspace{4ex}
 
 \begin{hoursItemizationWithProject}
 
 %----------------- reference -------------------
 
-%<{"type": "reference", "id": "listId"}
-    %<{"type": "reference", "id": "groupId"}
-        \lineitempWithoutCalc{2015/4/11} %<{"type":"reference", "id": "Service date"}>
-        {2}%<{"type":"reference", "id": "Number of hours"}>
-        {40}%<{"type":"reference", "id": "Payment per hour"}>
-        {Invoice}%<{"type":"reference", "id": "Project name"}>
+%<{type: "reference", id: "listId"}
+    %<{type: "reference", id: "groupId"}
+        \lineitempWithoutCalc{2015/4/11} %<{type: "reference", id: "Service date"}>
+        {2}%<{type: "reference", id: "Number of hours"}>
+        {40}%<{type: "reference", id: "Payment per hour"}>
+        {Invoice}%<{type: "reference", id: "Project name"}>
         {
             {
-                \item{Discussed requirements with client}%<{"type":"reference", "id": "Service description"}>
+                \item{Discussed requirements with client}%<{type:"reference", id: "Service description"}>
             }
         }
     %>
@@ -120,7 +159,7 @@ currency={euro}
 
 %-------------- list only meant for preview ---------------
 
-%<{"type": "preview"}
+%<{type: "preview"}
 \lineitempWithoutCalc{2015/4/11}{1.25}{50}{Invoice}{
     \item Wrote Invoice in LaTeX}
 
